# science_gui

./: .gitignore  package.xml  setup.cfg  setup.py
calibration/: BCA_실험_시퀀스.txt  bca_gold_laboratory_2026.csv
launch/: basestation.launch.py  rover.launch.py  rover_daemon.launch.py
resource/: science_gui
science_gui/: __init__.py  cam_driver.py  capture_report.py  gst_receiver.py  gst_sender.py  mission_gui.py  mission_panorama.py  npk_bridge.py  rover_launch_trigger.py  scilab_bridge.py
systemd/: rover_daemon.default.example  rover_daemon.service
